[package]
name = "echovr-rs"
version = "0.1.0"
authors = ["Shane Lillie <shane@readyatdawn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echovr-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
